--- a/arm_move/package.xml
+++ b/arm_move/package.xml
@@ -51,10 +51,14 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>moveit_commander</build_depend>
-  <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>rospy</build_depend>
+  <build_depend>moveit_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>moveit_commander</build_export_depend>
+  <build_export_depend>moveit_msgs</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>interbotix_xsarm_moveit</exec_depend>
