--- a/arm_move/CMakeLists.txt
+++ b/arm_move/CMakeLists.txt
@@ -59,6 +59,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate services in the 'srv' folder
 add_service_files(
   FILES
+  follow.srv
   reset.srv
   step.srv
 #   Service2.srv
