--- a/arm_move/CMakeLists.txt
+++ b/arm_move/CMakeLists.txt
@@ -209,5 +209,9 @@ catkin_install_python(PROGRAMS
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
 
+if(CATKIN_ENABLE_TESTING)
+  find_package(rostest REQUIRED)
+  add_rostest(test/${PROJECT_NAME}.test)
+endif()
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
